css/dropdown.css
details {
  position: relative;
  width: 250px;
  border: solid 2px #08f;
  border-radius: 28px;
  margin-left: 20px;
  margin-bottom: 16px;
}
  
details[open] {
  z-index: 1;
}
  
summary {
  padding: 10px;
  cursor: pointer;
  border-radius: 28px;
  background-color: black;
  list-style: none;
  height: 25px;
}
  
summary::-webkit-details-marker {
  display: none;
}
  
details[open] summary:before {
  content: '';
  display: block;
  width: 100vw;
  height: 100vh;
  background: transparent;
  position: fixed;
  top: 0;
  left: 0;
}
  
summary:after {
  content: '';
  display: inline-block;
  width: .5rem;
  height: .5rem;
  transform-origin: center center;
  transition: transform ease-in-out 100ms
}
  
summary:focus {
  outline: none;
}
  
details[open] summary:after {
  transform: rotate(-45deg) translate(0%, 0%);
}

#large {
  max-height: 300px;
}

ul {
  width: 102%;
  background-image: radial-gradient(rgb(6, 45, 82), rgb(0, 0, 0));
  position: absolute;
  top: calc(100% + .9rem);
  left: -2px;
  padding: 1rem;
  margin: 0 auto;
  box-sizing: border-box;
  border-radius: 28px;
  max-height: 160px;
  overflow-y: auto;
  overflow-x: auto;
  border: solid 2px #08f;
}

/* FAKE SELECT */  
summary.radios {
  counter-reset: radios;
}
  
input[type=radio] {
  counter-increment: radios;
  appearance: none;
  display: none;
}
  
input[type=radio]:checked {
  display: inline;
}
  
input[type=radio]:after {
  content: attr(title);
  display: inline;
  font-size: 1rem;
}
  
ul.list {
  counter-reset: labels;
}
  
label {
  width: 100%;
  display: block;
  cursor: pointer;
  font-size: 24px;
  margin-top: -10px;
}

b {
  margin-left: 15px;
  color: #08f;
  font-size: 14px;
}
#big {
  font-size: 16px;
}

@media screen and (max-width: 700px) {
details {
  width: 200px;
  margin-left: 0px;
  margin-bottom: 25px;
}
#font_mobile {
  font-size: 9px;
  margin-left: -15px;
 }
}

